--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 buildscript {
     ext {
+        buildConfig = [
+                'compileSdk':32,
+                'targetSdk':32,
+                'minSdk':24
+        ]
         compose_version = '1.1.0-beta01'
     }
 }
