--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,47 @@
 [versions]
+activity-compose = '1.5.0'
 compose-compiler = '1.2.0'
+compose = '1.1.1'
+core = '1.8.0'
+espresso = '3.4.0'
+runtime-ktx = '2.5.0'
+junit = '4.13.2'
+ext-junit = '1.1.3'
 
 [libraries]
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
+androidx-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "runtime-ktx" }
 
-[plugins]
+# ---------------------------------------COMPOSE----------------------------------------------------
+compose-ui-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
+compose-material-material = { module = "androidx.compose.material:material", version.ref = "compose" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
+compose-ui-test = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
+compose-ui-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+compose-animation-animation = { module = "androidx.compose.animation:animation", version.ref = "compose" }
+compose-foundation-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
+compose-foundation-layout = { module = "androidx.compose.foundation:foundation-layout", version.ref = "compose" }
+compose-material-icons-ext = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
+compose-ui-util = { module = "androidx.compose.ui:ui-util", version.ref = "compose" }
+compose-ui-viewbinding = { module = "androidx.compose.ui:ui-viewbinding", version.ref = "compose" }
+compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose"}
+compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
+
+junit-junit = { module = "junit:junit", version.ref = "junit" }
+androidx-test-junit = { module = "androidx.test.ext:junit", version.ref = "ext-junit" }
+espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 
 [bundles]
+compose = [
+    'compose-ui-ui',
+    'compose-material-material',
+    'compose-ui-tooling-preview',
+    'compose-animation-animation',
+    'compose-foundation-foundation',
+    'compose-foundation-layout',
+    'compose-runtime',
+    'compose-ui-util',
+    'compose-material-icons-ext'
+]
 
