--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,33 @@
 [versions]
+accompanist = '0.24.11-rc'
 activity-compose = '1.5.0'
 compose-compiler = '1.2.0'
 compose = '1.1.1'
+compose-navigation = '2.5.0'
 core = '1.8.0'
+coroutines = '1.6.3'
 espresso = '3.4.0'
-runtime-ktx = '2.5.0'
-junit = '4.13.2'
 ext-junit = '1.1.3'
+glide = '4.13.2'
+junit = '4.13.2'
+kotlin = '1.7.0'
+runtime-ktx = '2.5.0'
+
 
 [libraries]
+# ---------------------------------------ANDROIDX---------------------------------------------------
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "core" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
-androidx-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "runtime-ktx" }
+androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "runtime-ktx" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
+
+# ---------------------------------------KOTLIN-----------------------------------------------------
+kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+kotlin-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+kotlin-extensions = { module = "org.jetbrains.kotlin:kotlin-android-extensions", version.ref = "kotlin" }
+kotlin-plugin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 
 # ---------------------------------------COMPOSE----------------------------------------------------
 compose-ui-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
@@ -28,9 +44,25 @@ compose-ui-viewbinding = { module = "androidx.compose.ui:ui-viewbinding", versio
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose"}
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
 
+# ---------------------------------------ACCOMPANIST------------------------------------------------
+accompanist-system-ui-controller = {module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist"}
+accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
+accompanist-insets = { module = "com.google.accompanist:accompanist-insets", version.ref = "accompanist" }
+accompanist-insetsui = { module = "com.google.accompanist:accompanist-insets-ui", version.ref = "accompanist" }
+accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
+accompanist-navigation-material = {module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist"}
+accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanist" }
+accompanist-pager-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
+accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanist" }
+
+# ---------------------------------------JUNIT & ESPRESSO-------------------------------------------
 junit-junit = { module = "junit:junit", version.ref = "junit" }
 androidx-test-junit = { module = "androidx.test.ext:junit", version.ref = "ext-junit" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
+
+# ---------------------------------------GLIDE------------------------------------------------------
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide"}
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide"}
 
 [bundles]
 compose = [
@@ -43,5 +75,12 @@ compose = [
     'compose-runtime',
     'compose-ui-util',
     'compose-material-icons-ext'
+]
+accompanist = [
+    'accompanist-system-ui-controller',
+    'accompanist-insets',
+    'accompanist-insetsui',
+    'accompanist-navigation-animation',
+    'accompanist-navigation-material'
 ]
 
