created ui for camera preview

--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     implementation(libs.bundles.compose)
     implementation(libs.bundles.accompanist)
 
+    implementation(libs.androidx.camera.camera2)
+    implementation(libs.androidx.camera.lifecycle)
+
+    implementation(libs.accompanist.permission)
+
     implementation(libs.glide)
     kapt(libs.glide.compiler)
 
