--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
                 'targetSdk':32,
                 'minSdk':24
         ]
-        compose_version = '1.1.0-beta01'
+    }
+    dependencies {
+        classpath(libs.hilt.gradle.plugin)
     }
 }
 
