--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':core-ui'
 include ':feature-image-capture'
 include ':feature-image-scan'
 include ':feature-scan-history'
+include ':core-text-recognition'
