--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,4 @@ include ':feature-image-capture'
 include ':feature-image-scan'
 include ':feature-scan-history'
 include ':core-text-recognition'
+include ':core-domain'
