--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include ':feature-image-scan'
 include ':feature-scan-history'
 include ':core-text-recognition'
 include ':core-domain'
+include ':core-model'
