--- a/feature-image-scan/build.gradle
+++ b/feature-image-scan/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation project(':core-ui')
     implementation project(':core-resources')
     implementation project(':core-domain')
+    implementation project(':core-model')
 
     implementation(libs.kotlin.stdlib)
     implementation(libs.kotlin.coroutines.core)
