added core database module

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include ':feature-scan-history'
 include ':core-text-recognition'
 include ':core-domain'
 include ':core-model'
+include ':core-database'
