--- a/core-model/build.gradle
+++ b/core-model/build.gradle
@@ -1,9 +1,10 @@
 plugins {
-    id 'java-library'
-    id 'org.jetbrains.kotlin.jvm'
+    id 'kotlin'
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+dependencies {
+    api(libs.androidx.room.common)
+    implementation(libs.kotlin.stdlib)
+    implementation(libs.kotlin.coroutines.core)
 }
+
