--- a/core-domain/build.gradle
+++ b/core-domain/build.gradle
@@ -26,6 +26,7 @@ android {
 dependencies {
 
     implementation project(':core-model')
+    implementation project(':core-database')
     implementation project(':core-text-recognition')
 
     implementation(libs.mlkit.text.recognition)
