--- a/core-model/build.gradle
+++ b/core-model/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     api(libs.androidx.room.common)
+    implementation(libs.dagger.dagger)
     implementation(libs.kotlin.stdlib)
     implementation(libs.kotlin.coroutines.core)
 }
