--- a/feature-image-capture/build.gradle
+++ b/feature-image-capture/build.gradle
@@ -33,8 +33,23 @@ dependencies {
 
     implementation project(':core-resources')
     implementation project(':core-ui')
+    implementation project(':core-domain')
+    implementation project(':core-model')
 
     implementation(libs.accompanist.permission)
+
+    implementation(libs.kotlin.stdlib)
+    implementation(libs.kotlin.coroutines.core)
+
+    implementation(libs.bundles.androidx.lifecycle)
+
+    implementation(libs.hilt.library)
+    implementation(libs.androidx.hilt.navigation.compose)
+
+    implementation(libs.coil.compose)
+
+    kapt(libs.hilt.compiler)
+    kapt(libs.androidx.hilt.compiler)
 
     implementation(libs.bundles.compose)
     implementation(libs.bundles.accompanist)
