--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ compose = '1.1.1'
 compose-navigation = '2.5.0'
 core = '1.8.0'
 coroutines = '1.6.3'
+dagger = '2.42'
 espresso = '3.4.0'
 ext-junit = '1.1.3'
 glide = '4.13.2'
@@ -45,7 +46,7 @@ androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref =
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt" }
 
 androidx-room-common = { module = "androidx.room:room-common", version.ref = "room" }
-androidx-room-compiler = { module = "androidx.room:room.compiler", version.ref = "room" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 
@@ -99,6 +100,8 @@ espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref =
 # ---------------------------------------GLIDE------------------------------------------------------
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide"}
 glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide"}
+
+dagger-dagger = { module = "com.google.dagger:dagger", version.ref ="dagger" }
 
 
 [bundles]
